[gd_scene load_steps=4 format=1]

[ext_resource path="res://Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/ClassificationRow.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 2
border_blend = false
draw_bg = true

[node name="ClassificationRow" type="Panel"]

rect/min_size = Vector2( 1000, 70 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 70.0
script/script = ExtResource( 2 )
position = 1
teamName = "You"
points = 0
wins = 0
draws = 0
losses = 0
goalDifference = 0

[node name="PlayerBg" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="Position" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 70.0
text = "20"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TeamName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 90.0
margin/top = 0.0
margin/right = 490.0
margin/bottom = 70.0
text = "Grasshoppers"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Points" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 490.0
margin/top = 0.0
margin/right = 590.0
margin/bottom = 70.0
text = "114"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wins" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 590.0
margin/top = 0.0
margin/right = 690.0
margin/bottom = 70.0
text = "38"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Draws" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 690.0
margin/top = 0.0
margin/right = 790.0
margin/bottom = 70.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Losses" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 790.0
margin/top = 0.0
margin/right = 890.0
margin/bottom = 70.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GoalDifference" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 890.0
margin/top = 0.0
margin/right = 990.0
margin/bottom = 70.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


